--- a/documentation/directives/passwordValidator.html
+++ b/documentation/directives/passwordValidator.html
@@ -146,14 +146,17 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="11"
-                            class="link-to-prism">src/app/Directives/password.directive.ts:11</a></div>
+                    <div class="io-line">Defined in <a href="" data-line="20"
+                            class="link-to-prism">src/app/Directives/password.directive.ts:20</a></div>
                 </td>
             </tr>
 
 
             <tr>
                 <td class="col-md-4">
+                    <div class="io-description"><p>Valida que un campo en un input siga un patrón especificado. Usado para la contraseña 
+en los validators del componente register y edit-user</p>
+</div>
 
                     <div class="io-description">
                         <b>Parameters :</b>
@@ -163,6 +166,7 @@
                                     <td>Name</td>
                                     <td>Type</td>
                                     <td>Optional</td>
+                                    <td>Description</td>
                                 </tr>
                             </thead>
                             <tbody>
@@ -177,6 +181,10 @@
                                     </td>
 
 
+                                    <td>
+                                        <p>El patrón según el cual se evalúa</p>
+
+                                    </td>
                                 </tr>
                                 <tr>
                                     <td>error</td>
@@ -189,6 +197,10 @@
                                     </td>
 
 
+                                    <td>
+                                        <p>el error que debe retornar si no cumple el patrón</p>
+
+                                    </td>
                                 </tr>
                             </tbody>
                         </table>
@@ -200,7 +212,8 @@
 
                     </div>
                     <div class="io-description">
-                        
+                        <p>si cumple el patrón</p>
+
                     </div>
                 </td>
             </tr>
@@ -221,8 +234,17 @@ import { NG_VALIDATORS, Validator, ValidationErrors, AbstractControl, ValidatorF
     selector: &#x27;[passwordValid]&#x27;,
     providers: [{ provide: NG_VALIDATORS, useExisting: passwordValidator, multi: true }]
 })
+
 export class passwordValidator{
 
+  /**
+   * Valida que un campo en un input siga un patrón especificado. Usado para la contraseña 
+   * en los validators del componente register y edit-user
+   * @param {RegExp} regex El patrón según el cual se evalúa
+   * @param {ValidationErrors} error el error que debe retornar si no cumple el patrón
+   * @returns {null} si cumple el patrón
+   * @returns { [key: string]: any } el error si no cumple el patrón
+   */
     static patternValidator(regex: RegExp, error: ValidationErrors): ValidatorFn {
         return (control: AbstractControl): { [key: string]: any } &#x3D;&gt; {
           if (!control.value) {
