--- a/documentation/injectables/BarService.html
+++ b/documentation/injectables/BarService.html
@@ -468,7 +468,7 @@
             </tr>
             <tr>
                 <td class="col-md-4">
-<code>updateBar(bar: <a href="../classes/Bar.html">Bar</a>)</code>
+<code>updateBar(bar: <a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank">any</a>)</code>
                 </td>
             </tr>
 
@@ -501,7 +501,7 @@
                                 <tr>
                                     <td>bar</td>
                                     <td>
-                                                <code><a href="../classes/Bar.html" target="_self" >Bar</a></code>
+                                                <code><a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank" >any</a></code>
                                     </td>
 
                                     <td>
@@ -635,10 +635,10 @@ export class BarService {
 
   /**
    * Hace el request a la api para actualizar el bar.
-   * @param {Bar} bar - bar con los datos actualizados.
+   * @param {any} bar - bar con los datos actualizados.
    * @returns {any}
    */
-  updateBar(bar:Bar):any{
+  updateBar(bar:any):any{
     console.log(bar);
     return this._http.put(this._url+&#x27;update/&#x27;+bar._id, bar);
   }
